Opened 17 years ago
Closed 14 years ago
#1578 closed bug (fixed)
Panic on boot (AHCI and/or VM related?)
Reported by: | pieterpan | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/pre-alpha1 |
Keywords: | Cc: | fredrik.holmqvist@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Using the latest revision (hrev22589) to test to see if #1417 was fixed. (it is, btw) Have a core2duo laptop with ahci. Unfortunately now I'm greeted with a PANIC. Maybe VM or AHCI related, but AHCI has worked well before.
PANIC: vm_page_fault: unhandled page fault in kernel space at 0x31, ip 0x802c42c1
See attached bt. Sorry, no serial debug log, as the laptop doesn't have serial port.
Attachments (1)
Change History (11)
by , 17 years ago
Attachment: | DSC02056.JPG added |
---|
comment:2 by , 17 years ago
Component: | - General → Drivers/Disk |
---|---|
Owner: | changed from | to
comment:3 by , 17 years ago
Component: | Drivers/Disk → System/Kernel |
---|---|
Owner: | changed from | to
This appears to be the same cause as bug #1434 The device manager loads the driver and passes an invalid cookie pointer
comment:4 by , 17 years ago
Actually the problem resides in the device manager. KDiskDeviceManager::InitialDeviceScan(). Then the devfs triggers a device scan with "/dev", probe_for_driver_modules() includes the ahci pci device in the scan because its type "/dev/disk" starts with "/dev" (if it was an exact type match, it wouldn't find the disk devfs directory anyway). The ahci driver attachs its device to the ahci pci device. Then the devfs triggers a device scan with "/dev/disk", probe_for_driver_modules() includes the ahci pci device in the scan because its type "/dev/disk" starts with "/dev/disk". The ahci driver attachs again to the same ahci pci device.
A possible fix would be to check whether a pci device has already a child device attached, and avoid a new scan in probe_for_driver_modules() or register_supporting_child_devices() when node->children is not null.
Thoughts ?
comment:6 by , 16 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Unfortunately hrev22726 didn't really fix it. It still happenes with the revision from last week, same backtrace.
comment:7 by , 16 years ago
Cc: | added |
---|
Seeing same things as well on hrev23739. I'm using a AMD64 X2 on a SATA-drive in SATA-mode. Panics after 20-30s. Actually this was on a few revisions earlier. This one (where mmlr fixed a bit on sem) I think reported 'Panic: Double Fault' in wm, but I suspect it will do both.
But at least it boots...
comment:8 by , 14 years ago
Is this still relevant? In 2 years no update, and the laptop I had this problem with is broken.
comment:10 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Afaict this was fixed a very long time ago.
back trace