whenever a node has already a child, it means a driver has already attached to this node for this reason, we don't add such a node in the list of nodes to be scanned this fixes the bug #1578

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22726 a95241bf-73f2-0310-859d-f6bbb57e9c96